# MDpng2MDWebp

./: MDpng2MDwebp.py  MDpng2MDwebp.spec  README.md  pyproject.toml
